--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,7 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+gems:
+  - jekyll-srcset
+  - octopress-minify-html
+minify_html: false
