--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Penelope
 email: james@peneloperesearch.com
 description: EQUATOR network guidelines finder
-baseurl: "EquatorChecklist" # the subpath of your site, e.g. /blog/
+baseurl: "/EquatorChecklist/" # the subpath of your site, e.g. /blog/
 url: "http://peneloperesearch.github.io/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
